fix: reduce heading margins for tighter section spacing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -44,12 +44,12 @@ h1 {
 }
 h2 {
 	font-size: 27px;
-	margin-top: 2em;
-	margin-bottom: 0.3em;
+	margin-top: 1.4em;
+	margin-bottom: 0.25em;
 }
 h3 {
-	margin-top: 1.2em;
-	margin-bottom: 0.2em;
+	margin-top: 0.8em;
+	margin-bottom: 0.15em;
 	font-size: 22px;
 }
 
